--- a/dada/installer-disabled/templates/fast_cgi_test_widget.tmpl
+++ b/dada/installer-disabled/templates/fast_cgi_test_widget.tmpl
@@ -2,7 +2,7 @@
 
 <!-- tmpl_if errors -->
 
-    <div class="badweatherbox"> 
+    <div class="alert-box info radius"> 
         <p>Something else may be needed, for FastCGI support:</p> 
         <code><!-- tmpl_var errors escape="HTML" --></code>
     </div>
