--- a/dada/templates/admin_screen.tmpl
+++ b/dada/templates/admin_screen.tmpl
@@ -62,7 +62,7 @@
     
     <!-- tmpl_if expr="list_max_reached == 1" -->
         
-		 <div class="badweatherbox">
+		 <div class="alert-box info radius">
 		    <p>
 	         You have reached the maximum number of Mailing Lists that can be created.
 	        </p>
