--- a/dada/templates/adv_archive_options_screen.tmpl
+++ b/dada/templates/adv_archive_options_screen.tmpl
@@ -232,7 +232,7 @@ Email Address Protection
 
  <!-- tmpl_unless can_use_recaptcha_mailhide -->
     
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
     <p>
       <strong>reCAPTCHA MailHide Disabled.</strong> reCAPTCHA MailHide needs to be successfully configured. 
 
@@ -393,7 +393,7 @@ Email Address Protection
 	      </p>
 	      
 <!-- tmpl_else --> 
-	      <div class="badweatherbox">
+	      <div class="alert-box info radius">
 	      <p>
 	       <strong>
 	        Disabled. 
@@ -489,7 +489,7 @@ Gravatars
 </legend>
 
 <!-- tmpl_unless can_use_gravatar_url --> 
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 	<p>
 	  <strong>Disabled.</strong> You will need to install the <a href="http://search.cpan.org/~mschwern/Gravatar-URL/" target="_blank" >Gravatar::URL CPAN module</a>
 	</p>
