--- a/dada/templates/amazon_ses_requirements_widget.tmpl
+++ b/dada/templates/amazon_ses_requirements_widget.tmpl
@@ -8,7 +8,7 @@
 	
 <!-- tmpl_else --> 
 	
-	<div class="badweatherbox"> 
+	<div class="alert-box info radius"> 
 		
 		<p> 
 			One or more of the following CPAN modules needs to be installed for Amazon SES sending to work:
