--- a/dada/templates/archive_options_screen.tmpl
+++ b/dada/templates/archive_options_screen.tmpl
@@ -72,7 +72,7 @@
 
        <!-- tmpl_unless PROFILE_ENABLED -->
 
-		<div class="badweatherbox">
+		<div class="alert-box info radius">
 	    <p>
 	     <strong>
 	      Disabled.</strong> <!-- tmpl_var PROGRAM_NAME --> Profiles are not enabled.
@@ -144,7 +144,7 @@
        
        <!-- tmpl_unless can_use_captcha -->
 	    
-		<div class="badweatherbox">
+		<div class="alert-box info radius">
 	    <p>
 	      <strong>Disabled.</strong> The CAPTCHA system (<strong><!-- tmpl_var CAPTCHA_TYPE --></strong>) needs to be successfully configured. 
 	   
