--- a/dada/templates/archive_screen.tmpl
+++ b/dada/templates/archive_screen.tmpl
@@ -17,7 +17,7 @@
 
 <!-- tmpl_if send_archive_errors -->
 	
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 		<p>
 	 	There was an error in the Send Archive form you filled out.
 		</p>
