--- a/dada/templates/default_screen.tmpl
+++ b/dada/templates/default_screen.tmpl
@@ -5,7 +5,7 @@
 
 
 <!-- tmpl_if error_invalid_list --> 
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 	<p>
 	 <strong>Warning!</strong>
 
