--- a/dada/templates/delete_email_screen.tmpl
+++ b/dada/templates/delete_email_screen.tmpl
@@ -22,7 +22,7 @@
 <!-- tmpl_if GLOBAL_UNSUBSCRIBE -->
 	
 	<!-- tmpl_if can_use_global_unsubscribe --> 
-		<div class="badweatherbox">
+		<div class="alert-box info radius">
 		<p>
 		 Global Unsubscribe has been enabled.
 		</p>
