--- a/dada/templates/error_install_dir_still_around_screen.tmpl
+++ b/dada/templates/error_install_dir_still_around_screen.tmpl
@@ -4,7 +4,7 @@
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
 
-<div class="badweatherbox">
+<div class="alert-box info radius">
 The, <em>dada/<strong>installer</strong></em> directory needs to be removed (preferably) or renamed, before you 
 can utilize Dada Mail. 
 </div>
