--- a/dada/templates/error_invalid_password_screen.tmpl
+++ b/dada/templates/error_invalid_password_screen.tmpl
@@ -73,7 +73,7 @@
     
  	<!-- tmpl_if can_use_captcha --> 
 	    <!-- tmpl_if invalid_captcha --> 
-            <div class="badweatherbox"> 
+            <div class="alert-box info radius"> 
     			<p>
     				<strong>
     					CAPTCHA Failed. 
