--- a/dada/templates/file_attachments_widget.tmpl
+++ b/dada/templates/file_attachments_widget.tmpl
@@ -59,7 +59,7 @@
 
 	</div> 
 <!-- tmpL_else --> 
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 		<p>
 			<strong>
 				Disabled.
