--- a/dada/templates/list_cp_options_screen.tmpl
+++ b/dada/templates/list_cp_options_screen.tmpl
@@ -25,7 +25,7 @@
 
 
 <!-- tmpl_if expr="((using_no_wysiwyg_editor == 1) && (list_settings.use_wysiwyg_editor ne 'none'))" --> 
-<div class="badweatherbox">
+<div class="alert-box info radius">
 <p>
  <strong>Warning!</strong>
 <p>You're currently selected WYSIWYG editor is currently not being used, because of a misconfiguration.</p>
