--- a/dada/templates/list_invite_screen.tmpl
+++ b/dada/templates/list_invite_screen.tmpl
@@ -105,7 +105,7 @@
 	</fieldset>
 	
 <!-- tmpl_else -->
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 	<p> 
 		No addresses have passed verification. 
 	</p> 
