--- a/dada/templates/list_page_screen.tmpl
+++ b/dada/templates/list_page_screen.tmpl
@@ -8,7 +8,7 @@
 
 <!-- tmpl_if error_no_email --> 
 
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
     <p>
      Please fill in your email address in the form below:
     </p>
