--- a/dada/templates/list_unsubscribe.tmpl
+++ b/dada/templates/list_unsubscribe.tmpl
@@ -9,7 +9,7 @@
 <!-- tmpl_if list_exists --> 
 
 	<!-- tmpl_if expr="((process == 1) && (is_valid == 0))" --> 
-	<div class="badweatherbox"> 
+	<div class="alert-box info radius"> 
 	<!-- tmpl_if list_settings.private_list --> 
     <p><strong>Problems with Unsubscription Request</strong>	
 	<!-- tmpl_else --> 
