--- a/dada/templates/mass_mailing_limit_notice_widget.tmpl
+++ b/dada/templates/mass_mailing_limit_notice_widget.tmpl
@@ -2,7 +2,7 @@
 
 <!-- tmpl_if MAILOUT_AT_ONCE_LIMIT --> 
 	<!-- tmpl_if mailout_will_be_queued --> 
-		<div class="badweatherbox">
+		<div class="alert-box info radius">
 			
 		 <p>
 			This Mass Mailing will be <strong>queued</strong>. 
