--- a/dada/templates/mass_mailing_options_screen.tmpl
+++ b/dada/templates/mass_mailing_options_screen.tmpl
@@ -41,7 +41,7 @@
                 Convert CSS &lt;style&gt; blocks to inline styles in HTML messages
             </label>
             <!-- tmpl_unless can_use_css_inliner --> 
-                <div class="badweatherbox">
+                <div class="alert-box info radius">
                     <p>
                         <strong>Disabled:</strong>
                         The Perl CPAN module, <strong>CSS::Inliner</strong> will need to be installed.
