--- a/dada/templates/plugins/bounce_handler/default.tmpl
+++ b/dada/templates/plugins/bounce_handler/default.tmpl
@@ -19,7 +19,7 @@
 
 <!-- tmpl_unless plugin_configured --> 
 
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 	  <p><strong>
 	   Warning! <!-- tmpl_var Plugin_Name --> Not Configured!
 	  </strong></p> 
