--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -27,7 +27,7 @@
     
     
 <!-- tmpl_if list_settings.disable_discussion_sending -->
-<div class="badweatherbox">
+<div class="alert-box info radius">
   <p><strong>
    This Plugin is Currently Disabled for this Mailing List!
   </strong></p> 
@@ -48,7 +48,7 @@
 
 
 <!-- tmpl_if error_list_email_set_to_list_owner_email -->
- 	<div class="badweatherbox">
+ 	<div class="alert-box info radius">
 		<p>
 			Your List Email is set to the same address as the <strong>List Owner Email</strong>. It needs to be set to a different address. 
 		</p>
@@ -56,7 +56,7 @@
 <!-- /tmpl_if -->
 	
 <!-- tmpl_if error_list_email_set_to_another_list_owner_email --> 
- 	<div class="badweatherbox">
+ 	<div class="alert-box info radius">
 		<p>
 			Your List Email is set to the same address as a <strong>List Owner Email address of a different Mailing List</strong>. It needs to be set to a different address. 
 		</p>
@@ -64,14 +64,14 @@
 	<!-- /tmpl_if -->
 		
 <!-- tmpl_if error_list_email_set_to_list_admin_email --> 
- 	<div class="badweatherbox">
+ 	<div class="alert-box info radius">
 		<p>
 			Your List Email is set to the same address as the <strong>List Admin Email</strong>. It needs to be set to a different address. 
 		</p>
 	</div> 
 <!-- /tmpl_if -->
 <!-- tmpl_if error_list_email_set_to_another_list_admin_email --> 
- 	<div class="badweatherbox">
+ 	<div class="alert-box info radius">
 		<p>
 			Your List Email is set to the same address as the <strong>List Admin Email address of a different Mailing List</strong>. It needs to be set to a different address. 
 		</p>
@@ -79,14 +79,14 @@
 <!-- /tmpl_if -->
 
 <!-- tmpl_if error_list_email_subscribed_to_list --> 
- 	<div class="badweatherbox">
+ 	<div class="alert-box info radius">
 		<p>
 			Your List Email is currently subscribed to your <strong>Subscription List</strong>. It needs to be set to a different address. 
 		</p>
 	</div> 
 <!-- /tmpl_if -->
 <!-- tmpl_if error_list_email_subscribed_to_authorized_senders --> 
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 		<p>
 			Your List Email is currently subscribed to your <strong>Authorized Senders List</strong>. It needs to be set to a different address. 
 		</p>
@@ -94,7 +94,7 @@
 <!-- /tmpl_if -->
 
 <!-- tmpl_if error_list_email_subscribed_to_moderators --> 
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 		<p>
 			Your List Email is currently subscribed to your <strong>Moderators List</strong>. It needs to be set to a different address. 
 		</p>
@@ -102,7 +102,7 @@
 <!-- /tmpl_if -->
 
 <!-- tmpl_if error_list_email_subscribed_to_another_list --> 
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 		<p>
 				Your List Email is currently subscribed to <strong>another mailing list's Subscription List</strong>. It needs to be set to a different address. 
 			</p>
@@ -110,7 +110,7 @@
 	
 <!-- /tmpl_if -->
 <!-- tmpl_if error_list_email_subscribed_to_another_authorized_senders --> 
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 	<p>
 			Your List Email is currently subscribed to <strong>another mailing list's Authorized Senders List</strong>. It needs to be set to a different address. 
 		</p>
@@ -118,7 +118,7 @@
 
 <!-- /tmpl_if -->
 <!-- tmpl_if error_list_email_subscribed_to_another_moderators --> 
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 	<p>
 			Your List Email is currently subscribed to <strong>another mailing list's Moderators List</strong>. It needs to be set to a different address. 
 		</p>
