--- a/dada/templates/plugins/change_list_shortname/verify.tmpl
+++ b/dada/templates/plugins/change_list_shortname/verify.tmpl
@@ -4,7 +4,7 @@
 	
 	<p>Some problems were found with the new List Short Name you picked out:</p> 
 	
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 	
 	<ul>
 		
