--- a/dada/templates/plugins/password_protect_directories/default.tmpl
+++ b/dada/templates/plugins/password_protect_directories/default.tmpl
@@ -90,7 +90,7 @@
 
 <!-- tmpl_if problems --> 
 
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 
 	<p><strong>Problems were found with the information you just submitted:</strong></p> 
 	<ul>
