--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -105,7 +105,7 @@
 		<p>
 		 <label for="tracker_auto_parse_links">Automatically</label></p>
 		<!-- tmpl_unless can_use_auto_redirect_tag -->
-			<div class="badweatherbox"> 
+			<div class="alert-box info radius"> 
 				<p class="error"> 
 					Disabled. You must have the HTML::LinkExtor and URI::Find CPAN modules installed. 
 				</p>
@@ -242,7 +242,7 @@
           
               <td>
                    <div id="field_name_group">                
-                		<table  class="stripedtable" style="width:auto">
+                		<table  style="width:auto">
                 		    <!-- tmpl_loop field_names --> 
                             <tr <!-- tmpl_if __odd__ -->class="alt"<!--/tmpl_if-->>     
                 		        <td width="25">
