--- a/dada/templates/plugins/tracker/message_individual_email_activity_report_table.tmpl
+++ b/dada/templates/plugins/tracker/message_individual_email_activity_report_table.tmpl
@@ -6,7 +6,7 @@
 <div>
 <div style="max-height: 400px; overflow: auto; border:1px solid black overflow-y: scroll; overflow-x: hidden;font-size:.75em">
 
-	<table  class="stripedtable" style="border:1px solid black;border-collapse: collapse;width:640px">
+	<table  style="border:1px solid black;border-collapse: collapse;width:640px">
 		<thead style="background-color:#999999;color:#FFFFFF;  text-align:center">
 		<tr style="background-color:#999999;color:#FFFFFF;  text-align:center">
 			<th colspan="3" style="background-color:#333333;color:#FFFFFF; text-align:center">
