--- a/dada/templates/profile_fields_screen.tmpl
+++ b/dada/templates/profile_fields_screen.tmpl
@@ -58,7 +58,7 @@
     
     <!-- tmpl_unless field_status --> 
     
-		<div class="badweatherbox"> 
+		<div class="alert-box info radius"> 
 		
 		<!-- tmpl_unless edit_field --> 
 		
