--- a/dada/templates/profile_home.tmpl
+++ b/dada/templates/profile_home.tmpl
@@ -71,7 +71,7 @@ function confirm_profile_removal(form_name) {
 
 
 <!-- tmpl_if errors --> 
-    <div class="badweatherbox">
+    <div class="alert-box info radius">
     <p> 
         <strong>There was an error with your last request:</strong>
     </p> 
