--- a/dada/templates/profile_login.tmpl
+++ b/dada/templates/profile_login.tmpl
@@ -62,7 +62,7 @@
 
 
     <!-- tmpl_if errors --> 
-        <div class="badweatherbox">
+        <div class="alert-box info radius">
             <p>
                 <strong>
                     Problems with your Request:
