--- a/dada/templates/resend_conf_captcha_step.tmpl
+++ b/dada/templates/resend_conf_captcha_step.tmpl
@@ -70,7 +70,7 @@ address: </p>
 <fieldset> 
 
 <!-- tmpl_if expr="captcha_auth == 0" --> 
-	<div class="badweatherbox"> 
+	<div class="alert-box info radius"> 
 		<p> 
 		 CAPTCHA wasn't solved. Please try again:
 		</p>
