--- a/dada/templates/send_email_screen.tmpl
+++ b/dada/templates/send_email_screen.tmpl
@@ -73,7 +73,7 @@
 
 <!-- tmpl_unless list_settings.smtp_server -->	
 	<!-- tmpl_if expr="list_settings.sending_method eq 'smtp'"  -->
-		<div class="badweatherbox">
+		<div class="alert-box info radius">
 		<p>
 		 Warning! No SMTP Server has been set!
 		</p>
