--- a/dada/templates/validate_update_email_widget.tmpl
+++ b/dada/templates/validate_update_email_widget.tmpl
@@ -2,7 +2,7 @@
 
 	
 	<!-- tmpl_if expr="(email eq updated_email)" --> 
-		<div class="badweatherbox">
+		<div class="alert-box info radius">
 			<p>
 				<strong>
 					The updated email address you've entered is the same as the current address.
@@ -13,7 +13,7 @@
 	
 		<!-- tmpl_if none_validated --> 
 
-			<div class="badweatherbox">
+			<div class="alert-box info radius">
 				<p>
 					<strong>
 						No Mailing Lists or sublists validated.
