--- a/dada/installer-disabled/templates/captcha_default_test_widget.tmpl
+++ b/dada/installer-disabled/templates/captcha_default_test_widget.tmpl
@@ -1,6 +1,6 @@
 <!-- begin captcha_default_test_widget.tmpl --> 
 	<!-- tmpl_if errors --> 
-		<div class="badweatherbox"> 
+		<div class="alert-box info radius"> 
 			<p>
 				<strong>
 					Default CAPTCHA Configuration Failed:
