--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -9,7 +9,7 @@
 	<h1>
 		Problems When Attempting to Install!
 	</h1>
-	<div class="badweatherbox"> 
+	<div class="alert-box info radius"> 
 	 <p><strong>Yikes!</strong>
 		<p>Some problems were encountered, when attempting to install and configure 
 		<!-- tmpl_var PROGRAM_NAME -->. Details are marked below.</p>
@@ -22,7 +22,7 @@
 
 <!-- tmpl_if error_cant_read_config_dot_pm --> 
 
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 
 
 	<h3>Warning!</h3>
@@ -40,7 +40,7 @@
 <!-- tmpl_if error_cant_write_config_dot_pm --> 
 
 
-<div class="badweatherbox">
+<div class="alert-box info radius">
 
 
 <h3>Warning!</h3> 
@@ -64,7 +64,7 @@
 
 	<!-- tmpl_if test_complete_dada_files_dir_structure_exists --> 
 
-		<div <!-- tmpl_if expr="(install_type eq 'install')" -->class="badweatherbox"<!-- tmpl_else -->class="clearskiesbox"<!-- /tmpl_if -->>
+		<div <!-- tmpl_if expr="(install_type eq 'install')" -->class="alert-box info radius"<!-- tmpl_else -->class="clearskiesbox"<!-- /tmpl_if -->>
 		<p>
 			A current <!-- tmpl_var PROGRAM_NAME --> configuration was discovered at:</p> 
 
@@ -151,7 +151,7 @@
 			<!-- tmpl_if expr="(install_type eq 'install')" -->	
 			<!-- tmpl_if error_create_dada_files_dir  --> 
 
-				<div class="badweatherbox">
+				<div class="alert-box info radius">
 				<ul> 
 				<li>
 				 Can not create, <em><!-- tmpl_var install_dada_files_dir_at -->/<strong><!-- tmpl_var Dada_Files_Dir_Name --></strong></em>
@@ -164,7 +164,7 @@
 			<!-- /tmpl_if --> 
 			<!-- tmpl_if error_dada_files_dir_exists  --> 
 
-					<div class="badweatherbox">
+					<div class="alert-box info radius">
 						<ul> 
 						<li>
 							<p>
@@ -248,7 +248,7 @@
 
 
 <!-- tmpl_if error_program_url_is_blank  --> 
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 	
 	<ul>
 	<li>
@@ -300,7 +300,7 @@
 	</div> 
 	
 	<!-- tmpl_if error_create_dada_mail_support_files_dir  --> 
-		<div class="badweatherbox">
+		<div class="alert-box info radius">
 			<ul> 
 			<li>
 			 Can not create or write into, the below Support Files Directory. 
@@ -335,7 +335,7 @@
 
 
 <!-- tmpl_if error_root_pass_is_blank  --> 
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 	
 	<ul>
 	<li>
@@ -346,7 +346,7 @@
 
 <!-- /tmpl_if -->
 <!-- tmpl_if error_pass_no_match  --> 
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 	
 	<ul>
 	<li>
@@ -396,7 +396,7 @@
 	?</a>]</legend> 
 
 <!-- tmpl_if error_sql_connection  --> 
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 	
 	<ul>
 	<li>
@@ -414,7 +414,7 @@
 <div id="backend_help" class="clearskiesbox"> 
  
     <!-- tmpl_unless can_use_DBI --> 
-        <div class="badweatherbox">
+        <div class="alert-box info radius">
             <p>
                 <strong>
                     No supported backends can be found! 
@@ -461,7 +461,7 @@ If using either the SQL backends, make sure to create a new database before conf
 	<legend>SQL Information</legend> 
 	
 	<!-- tmpl_if error_sql_table_populated -->
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 	
 	<ul>
 		<li>
@@ -517,7 +517,7 @@ If using either the SQL backends, make sure to create a new database before conf
 
 
 <!-- tmpl_else --> 
-	<div class="badweatherbox">
+	<div class="alert-box info radius">
 	<p>Your current server setup does not support the SQL backend. 
 	</p>
 </div>
@@ -1154,7 +1154,7 @@ editors also have the ability to make simple HTML tables for basic layouts.
 	        </p>
 	        
 	        <!-- tmpl_unless can_use_HTML_Tree --> 
-                <div class="badweatherbox">
+                <div class="alert-box info radius">
                     <p>
                         <strong>
                             Magic Templates are not supported.
