--- a/dada/templates/add_screen.tmpl
+++ b/dada/templates/add_screen.tmpl
@@ -45,7 +45,7 @@
 <!-- tmpl_if expr="(type eq 'list')" -->
 	
 	<!-- tmpl_if subscription_quota_reached -->
-		<div class="badweatherbox">
+		<div class="alert-box info radius">
 		<p>
 		 <strong>Warning!</strong>
 		</p>
@@ -62,7 +62,7 @@
 	<!--tmpl_else-->
 	
 		<!-- tmpl_if use_subscription_quota --> 
-			<div class="badweatherbox">
+			<div class="alert-box info radius">
 				<p>
 					There is currently a limit of, <!-- tmpl_var subscription_quota --> 
 					Subscribers allowed to be subscribed on your mailing list.
@@ -72,7 +72,7 @@
 		
 		<!-- tmpl_if SUBSCRIPTION_QUOTA --> 
 	
-			<div class="badweatherbox">			
+			<div class="alert-box info radius">			
 			<p>
 				<strong>Warning!</strong>
 			</p> 
@@ -90,7 +90,7 @@
 <!--/tmpl_if-->
 
 <!-- tmpl_if list_is_closed -->
-		<div class="badweatherbox"> 
+		<div class="alert-box info radius"> 
 		<p>
 		 	<strong>Disabled</strong>.
 	 	</p>
