--- a/dada/templates/amazon_ses_verify_email_widget.tmpl
+++ b/dada/templates/amazon_ses_verify_email_widget.tmpl
@@ -8,7 +8,7 @@
 			</p>
 		</div>
 	<!-- tmpl_else -->
-		<div class="badweatherbox"> 
+		<div class="alert-box info radius"> 
 			<p>
 				<strong>
 					Warning!
@@ -18,7 +18,7 @@
 		</div>
 	<!-- /tmpl_if --> 
 <!-- tmpl_else -->
-	<div class="badweatherbox"> 
+	<div class="alert-box info radius"> 
 		<p>
 			Invalid Email Address! Please double-check you've entered a valid email address. 
 		</p>
