--- a/dada/templates/view_list_table_widget.tmpl
+++ b/dada/templates/view_list_table_widget.tmpl
@@ -5,7 +5,7 @@
     <div style="height: 300px; overflow: auto; width:100%">
 --> 
 
- <table style="width:100%">
+ <table style="width:100%" class="responsive">
 
 <thead> 			
 		
