--- a/dada/templates/send_email_file_attachments_widget.tmpl
+++ b/dada/templates/send_email_file_attachments_widget.tmpl
@@ -1,4 +1,4 @@
-<!-- begin file_attachments_widget.tmpl --> 
+<!-- begin send_email_file_attachments_widget.tmpl --> 
 
 <!-- tmpl_if expr="((kcfinder_enabled == 1) || (core5_filemanager_enabled == 1))" -->
 
@@ -31,7 +31,7 @@
 		<p>
 			<button type="button" name="attachment2_button" id="attachment2_button" value=""  data-attachment="attachment2" class="kcfinder_open"/>Select a File...</button>
 			<input  type="hidden" name="attachment2"        id="attachment2"        value="" /> 
-			<input type="button" value="[x]"  class="remove_attachment alertive" id="attachment2_remove_button" data-attachment="attachment2" />
+			<input type="button" value="[x]"  class="remove_attachment alertive button" id="attachment2_remove_button" data-attachment="attachment2" />
 		</p>
 
 
@@ -72,4 +72,4 @@
 
 <!-- /tmpl_if --> 
 
-<!-- end file_attachments_widget.tmpl --> 
+<!-- end send_email_file_attachments_widget.tmpl --> 
