--- a/dada/templates/send_email_screen.tmpl
+++ b/dada/templates/send_email_screen.tmpl
@@ -141,7 +141,7 @@
 	    <!-- tmpl_include plaintext_message_form_field_widget.tmpl -->
 	</div>
 	<div id="file_attachments">		
-	    <!-- tmpl_include file_attachments_widget.tmpl -->
+	    <!-- tmpl_include send_email_file_attachments_widget.tmpl -->
 	</div> 
 	
 	
