--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -411,7 +411,7 @@
 	
 	<!-- tmpl_if comment --> 
 				<div id="file_attachments">		
-				<!-- tmpl_include file_attachments_widget.tmpl -->
+				<!-- tmpl_include send_email_file_attachments_widget.tmpl -->
 				</div> 
 	<!-- /tmpl_if --> 
 	
