--- a/dada/static/css/dada_mail.css
+++ b/dada/static/css/dada_mail.css
@@ -530,6 +530,7 @@ color: #000;
 }
 
 */
+/*
 #Dada input.small_button {
 	margin: 1px;
 	padding: 2px;
@@ -565,7 +566,7 @@ color: #000;
 }
 
 
-
+*/
 /*
 #Dada input.small_input {
 	margin: 1px;
