--- a/dada/templates/admin_menu_widget-bak.tmpl
+++ b/dada/templates/admin_menu_widget-bak.tmpl
@@ -14,11 +14,11 @@
   <!-- /tmpl_unless -->
  <!-- tmpl_if Title_URL -->
      <!-- tmpl_if Activated -->
-     <a href="<!-- tmpl_var name="Title_URL" -->" id="admin_menu_<!-- tmpl_var Function escape="HTML" -->">
+     <a href="<!-- tmpl_var name="Title_URL" -->" class="admin_menu_<!-- tmpl_var Function escape="HTML" -->">
       <!-- tmpl_var Title -->
      </a>
    <!--tmpl_else--> 
-    <a href="<!-- tmpl_var name="Title_URL" -->" id="admin_menu_<!-- tmpl_var Function escape="HTML" -->" class="menu_disabled>">
+    <a href="<!-- tmpl_var name="Title_URL" -->" class="admin_menu_<!-- tmpl_var Function escape="HTML" -->" class="menu_disabled>">
      <!-- tmpl_var Title -->
     </a>
    <!--/tmpl_if--> 
