--- a/dada/templates/mail_sending_advanced_options_screen.tmpl
+++ b/dada/templates/mail_sending_advanced_options_screen.tmpl
@@ -1,4 +1,4 @@
-<!-- begin adv_sending_preferences_screen.tmpl -->
+<!-- begin mail_sending_advanced_options_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="Mail Sending &#187; Advanced Options" -->
 <div id="screentitle"> 
@@ -7,8 +7,8 @@
 	</div> 
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
-<div id="adv_sending_preferences"></div>
-<div id="screen_meta" data-menu_highlight="adv_sending_preferences"></div>
+<div id="mail_sending_advanced_options"></div>
+<div id="screen_meta" data-menu_highlight="mail_sending_advanced_options"></div>
 
 <!-- tmpl_if done -->
 	<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
@@ -260,7 +260,7 @@
 
  
 <input type="hidden" name="process" value="1" />
-<input type="hidden" name="flavor"       value="adv_sending_preferences" />
+<input type="hidden" name="flavor"       value="mail_sending_advanced_options" />
 <div class="buttonfloat">
  <input type="reset"  class="cautionary" value="Clear Changes" />
  <input type="submit" class="processing" value="Save Changes" />
@@ -271,4 +271,4 @@
 
 
 
-<!-- end adv_sending_preferences_screen.tmpl -->
+<!-- end mail_sending_advanced_options_screen.tmpl -->
