--- a/dada/templates/send_email_headers_widget.tmpl
+++ b/dada/templates/send_email_headers_widget.tmpl
@@ -121,7 +121,9 @@
 			 <input type="radio" name="subject_from" id="subject_from_title_tag" value="title_tag"><label for="subject_from_title_tag" />
 		 </div>   	  		
 		 <div class="small-11 columns">
-			 Use the Webpage's &lt;title&gt; as Message Subject    
+			 <label for="subject_from_title_tag">
+				 Use the Webpage's &lt;title&gt; as Message Subject 
+			</label>   
  	     </div>
  	   </div> 
 			 
