--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -125,7 +125,7 @@
 		   Grab content from this webpage address (URL):
 		  </label>
 		  <br />
-		  <input type="url" name="url" id="url"  value="http://" />
+		  <input type="url" name="url" id="url"  placeholder="http://" />
 		</p>
 		<p>
 		  <input type="radio" name="content_from" id="content_from_textarea" value="content_from_textarea" />
@@ -322,7 +322,7 @@
 		    Grab content from this webpage address (URL): 
 		  </label>
   		  <br />
-  		  <input type="plaintext_url" name="plaintext_url" id="plaintext_url"  value="http://" />
+  		  <input type="text" name="plaintext_url" id="plaintext_url"  placeholder="http://" />
   		</p>
 
 
